fix: improve nav alignment
* #navLinks `grid-template-columns` now uses `min-content` for the middle row - allowing the two outside rows to consume (equally) more space

* centered link elements with `align-items` and `justify-content`

* tweaked link font size

--- a/style.css
+++ b/style.css
@@ -155,23 +155,25 @@ main {
     border: 20px solid #104626;
     border-top: 0px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr min-content 1fr;
     grid-template-rows: repeat(4, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     width: 100%; /* bruh */
     height: 100%; /* bruh */
 }
-#navLinks [class^='div'] {
+
+#navLinks > div {
     width: 100%;
     height: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
-/*.parent {*/
 
-/*}*/
-
-/* you should put ABOUT, CV, WORK text in <a> tags (to make clickable), then use flex on the div1-9 containers to justify/align center them properly */
+#navLinks * {
+    font-size: 2.5rem;
+}
 
 .div1 {
     grid-area: 1 / 1 / 2 / 2;
